vlib/v/parser/tests/enum_gen_map_as_err.vv
[gen_map]
enum Foo as u8 {
	bar
	baz
}
